<resources>
    <string name="app_name">Daily Cashbook</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_menu_home">主页</string>
    <string name="tab_menu_dashboard">报表</string>
    <string name="tab_menu_cash">记账</string>
    <string name="tab_menu_mine">我的</string>
    <string name="tab_menu_logout">登出</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_account">请输入账号名称</string>
    <string name="prompt_password">请输入账号密码</string>
    <string name="prompt_tel">请输入电话号码</string>
    <string name="prompt_email">请输入电子邮箱</string>
    <string name="action_log_in">登录</string>
    <string name="action_sign_up">注册</string>
    <string name="income">收入</string>
    <string name="expense">支出</string>
    <string name="camera">拍照</string>
    <string name="date">日期</string>
    <string name="prompt_amount">请输入金额</string>
    <string name="prompt_comment">请填写备注</string>
    <string name="number_dot">.</string>
    <string name="confirm">确定</string>
    <string name="prompt_date">选择日期</string>
    <string name="charge_picture_1">账单图片1</string>
    <string name="charge_picture_2">账单图片2</string>
    <string name="prompt_picture">添加照片</string>
    <string name="choice_open_camera">拍照</string>
    <string name="choice_select_from_album">相册</string>
    <string name="day">天</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="period">周期</string>
    <string name="date_range">时间范围：</string>
    <string name="expenditure">支出：</string>
    <string name="income_home">收入：</string>
    <string name="prompt_category">点击下列图标选择类别</string>
    <string name="album">相册</string>
    <string name="inAndOutDetails">收支明细：</string>
    <string name="today">2021年6月13日</string>
    <string name="delete">删 除</string>
    <string name="clear">清除</string>
    <string name="remain">结余：</string>
    <string name="income_chart">收入图表</string>
    <string name="expenditure_chart">支出图表</string>
    <string name="reset_password">修改密码</string>
    <string name="reset_image">修改头像</string>
    <string name="reset_email">修改Email</string>
    <string name="reset_tel">修改电话号码</string>
    <string name="reminder">记账提醒</string>
    <string name="select_time">选择时间</string>
    <string name="setting_confirm">设定提醒</string>
    <string name="setting_cancel">取消提醒</string>
    <string name="go_back">返回</string>
    <string name="title">Title</string>
    <string name="welcome">Welcome,</string>

</resources>
