<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/home_page_AppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/home_page_collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_white"
                app:layout_scrollFlags="scroll|exitUntilCollapsed" >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/home_page_summary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/colorPrimaryDark"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:layout_constraintTop_toTopOf="parent"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

                    <LinearLayout
                        android:id="@+id/home_page_LinearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bookpage"
                        app:layout_constraintTop_toBottomOf="@+id/toolbar"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/home_page_current_date"
                            android:layout_width="match_parent"
                            android:layout_height="70dp"
                            android:layout_marginStart="15dp"
                            android:textSize="25sp"
                            android:text="@string/date_range"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/home_page_text_income"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginStart="60dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:text="@string/expenditure"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/home_page_text_expenditure"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textSize="20sp"
                            android:layout_marginStart="60dp"
                            android:text="@string/income_home"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_white" />

                        <TextView
                            android:id="@+id/home_page_text_remain"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:textSize="20sp"
                            android:layout_marginStart="60dp"
                            android:text="@string/remain"
                            android:textStyle="bold"
                            android:gravity="center_vertical"
                            android:textColor="@color/text_white" />

                    </LinearLayout>


                    <Button
                        android:id="@+id/home_page_day"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:text="@string/day"
                        android:textColor="@color/text_white"
                        android:backgroundTint="@color/blue_gray"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@+id/home_page_month"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_LinearLayout"/>

                    <Button
                        android:id="@+id/home_page_month"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/gray2"
                        android:text="@string/month"
                        android:textColor="@color/text_white"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/home_page_day"
                        app:layout_constraintRight_toLeftOf="@+id/home_page_year"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_LinearLayout"/>

                    <Button
                        android:id="@+id/home_page_year"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/gray3"
                        android:text="@string/year"
                        android:textColor="@color/text_white"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@id/home_page_month"
                        app:layout_constraintRight_toLeftOf="@+id/home_page_period"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_LinearLayout"/>

                    <Button
                        android:id="@+id/home_page_period"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/gray4"
                        android:text="@string/period"
                        android:textColor="@color/text_white"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/home_page_year"
                        app:layout_constraintRight_toRightOf="@+id/home_page_clear_time"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_LinearLayout"/>

                    <Button
                        android:id="@+id/home_page_clear_time"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:backgroundTint="@color/black"
                        android:text="@string/clear"
                        android:textColor="@color/text_white"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toRightOf="@+id/home_page_period"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_LinearLayout"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:text="@string/inAndOutDetails"
                        android:gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:textSize="18sp"
                        android:backgroundTint="@color/bg_white"
                        android:background="@color/bg_white"
                        app:layout_constraintTop_toBottomOf="@+id/home_page_clear_time"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_page_recycle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hit_gray2"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_margin="16dp"
            android:src="@drawable/add"
            android:contentDescription="@string/tab_menu_cash" />
    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_main"
        app:headerLayout="@layout/menu_header"
        android:background="?attr/colorPrimary"/>

</androidx.drawerlayout.widget.DrawerLayout>